--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
 </head>
 <body>
     
-    
+    <header>
+        <div>
+            <h1>DAVID DESCAMPS</h1>
+            <h2>Parcs & Jardins</h2>
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li>Acceuil</li>
+                    <li>Nos Préstations</li>
+                    <li>Bois de chauffage</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 </body>
 </html>
