--- a/index.html
+++ b/index.html
@@ -12,47 +12,44 @@
 <body>
     
     <header>
-        <div>
+        <div id="header-logo">
             <h1>DAVID DESCAMPS</h1>
             <h2>Parcs & Jardins</h2>
         </div>
         <div>
-            <nav>
+            <nav id="menu">
                 <ul>
-                    <li>Acceuil</li>
-                    <li>Nos Préstations</li>
-                    <li>Bois de chauffage</li>
-                    <li>Contact</li>
+                    <li><a href="#accueil">Acceuil</a></li>
+                    <li><a href="#prestations">Nos Préstations</a></li>
+                    <li><a href="#bois">Bois de chauffage</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <Section>
-        <div>
-            <img src="/pexels-joão-vítor-heinrichs-5022456.jpg" alt="" width="100%" height="250px">
-            <p>Nous trouverons ensemble la meilleure solution</p>
-        </div>
-    </Section>
+    <div id="image-text">
+        <img src="./images/marguerite-1510602_1920.jpg" alt="image" style="width: 100%; height: 250px;">
+        <p>Nous Trouverons Ensemble La Meilleure Solution</p>
+    </div>
 
-    <Section>
+    <Section id="presentation">
         <div>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                Eum repudiandae nemo ex assumenda! Dolor aliquid optio aut delectus, aspernatur, 
-                temporibus facilis non est vitae impedit officiis? Atque aliquid explicabo odit corrupti 
-                voluptates quae doloremque ad amet dolor illum! Qui illum laboriosam deleniti reiciendis eaque molestias. 
-                Ducimus inventore ab quas placeat!Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                Eum repudiandae nemo ex assumenda! Dolor aliquid optio aut delectus, aspernatur, 
-                temporibus facilis non est vitae impedit officiis? Atque aliquid explicabo odit corrupti 
-                voluptates quae doloremque ad amet dolor illum! Qui illum laboriosam deleniti reiciendis eaque molestias. 
-                Ducimus inventore ab quas placeat!
+                Notre entreprise artisanale a beaucoup à vous offrir : 
+                son sérieux, son dynamisme, ses conseils.. L'éventail de notre matériel est adapté à tous types de surfaces et de travaux. 
+                La diversité des travaux déjà assurés par notre entreprise est le meilleur témoin de notre savoir-faire. 
+                Toutes les étapes de notre travail sont assurées avec l'exigence de répondre parfaitement à vos souhaits. 
+                Chaque demande est étudiée individuellement en tenant compte de l'environnement ( nature du sol, situtaion, ...), 
+                de vos souhaits et budget. 
+                Notre compétence paysagiste est au service de vos projets afin de valoriser au maximum votre espace de vie ou de travail. 
+                Outre notre savoir-savoir faire, notre force est notre capacité à nous adapté exactement à vos besoin. 
+                Quels que soient vos projets, n'hésitez pas a nous contacter !
             </p>
-            <img src="/pngegg.png" alt="" width="300" height="auto">
         </div>
     </Section>
 
-    <section>
+    <section id="prestation">
         <h3>Nos Préstations</h3>
 
         <div>
@@ -173,7 +170,12 @@
         </div>
     </section>
 
-    <section>
+    <section id="bois">
+
+
+    </section>
+
+    <section id="contact">
         <h3>Contactez-nous</h3>
         <div>
             <ul>
